[gd_scene format=3 uid="uid://euoup28876nb"]

[ext_resource type="Texture2D" uid="uid://rq8lmf03gap8" path="res://assets/textures/ui/buy_page.png" id="1_5nman"]
[ext_resource type="Script" uid="uid://b3bwa8s5texb6" path="res://entities/pages/buy_page.gd" id="2_hc1hj"]
[ext_resource type="PackedScene" uid="uid://db7dgie868s33" path="res://entities/number_display/number_display.tscn" id="3_lkrp7"]
[ext_resource type="PackedScene" uid="uid://cjn50xx4pdpow" path="res://entities/scroll_list/scroll_list.tscn" id="4_iamwa"]
[ext_resource type="PackedScene" uid="uid://b3s04747jk1vj" path="res://entities/pages/buy_page_cursor.tscn" id="5_t16gh"]

[node name="ShopPage" type="Sprite2D" unique_id=319899825]
texture = ExtResource("1_5nman")
centered = false
script = ExtResource("2_hc1hj")

[node name="NumberDisplay" parent="." unique_id=1731197946 instance=ExtResource("3_lkrp7")]
position = Vector2(295, 14)
right_aligned = true
no_pad = true
digits = 8

[node name="Thumbnail" type="Sprite2D" parent="." unique_id=141714602]
position = Vector2(9, 32)
centered = false

[node name="ScrollList" parent="." unique_id=746833403 instance=ExtResource("4_iamwa")]
position = Vector2(111, 33)
cursor_scene = ExtResource("5_t16gh")
